# omglolrs

./: .gitignore  COPYING  Cargo.toml  Makefile  README.md  tests.sh
src/: client.rs  email.rs  lib.rs  main.rs  structures.rs
src/requests/: dns.rs  mod.rs  statuslog.rs  themes.rs  weblog.rs
src/structures/: account.rs  dns.rs  email.rs  message_response.rs  mod.rs  now.rs  oauth.rs  pastebin.rs  purl.rs  request_response.rs  service_status.rs  statuslog.rs  themes.rs  time.rs  web.rs  weblog.rs
tests/: integration_tests.rs
