[package]
name = "omglol"
authors = ["Gil Poiares-Oliveira <gil@poiares-oliveira.com>"]
version = "0.0.2"
edition = "2021"
repository = "https://git.sr.ht/~gpo/omglolrs"
readme = "README.md"
description = """
A wraper for api.omg.lol for your Rust masterpieces.
"""

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0"}
email_address = { version = "0.2.4" }

[dev-dependencies]
dotenv = { version = "0.15.0" }
